2008-09-22  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  change the menu layout of the cheese page

2008-09-21  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/tour.html: 
	  minor html/css correction

2008-09-21  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/Makefile.am: 
	  fix some build errors

2008-09-21  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/images/cheese-2.24.png,
	  www.gnome.org/projects/cheese/data/screenshots/cheese-2.24.0-countdown.jpg,
	  www.gnome.org/projects/cheese/data/screenshots/cheese-2.24.0-effects.jpg,
	  www.gnome.org/projects/cheese/data/screenshots/cheese-2.24.0-fullscreen.jpg,
	  www.gnome.org/projects/cheese/data/screenshots/cheese-2.24.0-main.jpg,
	  www.gnome.org/projects/cheese/data/screenshots/cheese-2.24.0-share.jpg,
	  www.gnome.org/projects/cheese/data/shadowbox,
	  www.gnome.org/projects/cheese/data/shadowbox/css,
	  www.gnome.org/projects/cheese/data/shadowbox/css,
	  www.gnome.org/projects/cheese/data/shadowbox/css/shadowbox-light.css,
	  www.gnome.org/projects/cheese/data/shadowbox/css/shadowbox-light.css,
	  www.gnome.org/projects/cheese/data/shadowbox/css/shadowbox-light.css,
	  www.gnome.org/projects/cheese/data/shadowbox/images,
	  www.gnome.org/projects/cheese/data/shadowbox/images,
	  www.gnome.org/projects/cheese/data/shadowbox/images/loading-light.gif,
	  www.gnome.org/projects/cheese/data/shadowbox/images/loading-light.gif,
	  www.gnome.org/projects/cheese/data/shadowbox/images/loading-light.gif,
	  www.gnome.org/projects/cheese/data/shadowbox/js,
	  www.gnome.org/projects/cheese/data/shadowbox/js,
	  www.gnome.org/projects/cheese/data/shadowbox/js/shadowbox.js,
	  www.gnome.org/projects/cheese/data/shadowbox/js/shadowbox.js,
	  www.gnome.org/projects/cheese/data/shadowbox/js/shadowbox.js,