@@ -53,6 +53,18 @@
             </p>
 
             <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.24/cheese-2.24.0.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.24.0
+              </a>
+              <p>
+              was released on September 22nd 2008<br />
+              md5sums: a33c0b6cb211f2ee75757caca77f935b
+              </p>
+            </div>
+
+            <div class="download">
               <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.22/cheese-2.22.3.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
