@@ -91,7 +91,7 @@
             </ul>
             <p>
             For a more detailed list of requirements, have a look at the
-            <a href="http://svn.gnome.org/svn/cheese/trunk/README">README file</a>
+            <a href="http://svn.gnome.org/svn/cheese/tags/2.24.0/README">README file</a>
             </p>
 
             <h2>Bugs</h2>
@@ -140,6 +140,22 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>September 22nd 2008</h3>
+          <p>
+          <b>Stable</b>
+          version 2.24.0 was released!
+          New in this release
+          </p>
+          <ul>
+            <li>update the cheese dependencies</li>
+            <li>use the correct translated plural form when deleting more than one item from the thumbnail bar</li>
+            <li>do not add a new item to the thumbnail bar, if its already there</li>
+            <li>documentation update, courtesy of Joshua Henderson</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download.html">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-September/msg00117.html">full release notes</a>)
+
           <h3>September 8th 2008</h3>
           <p>
           <b>Unstable</b>
@@ -170,29 +186,6 @@
           </ul>
           <a href="download.html">Download it</a>
           (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-September/msg00015.html">full release notes</a>)
-
-          <h3>August 18th 2008</h3>
-          <p>
-          <b>Unstable</b>
-          version 2.23.90 was released!
-          New in this release
-          </p>
-          <ul>
-            <li>don't start cheese twice if another instance is running, but focus the running window</li>
-            <li>fancy up the cheese window with some alignment stuff</li>
-            <li>select the last thumbnail item, if the last one was deleted</li>
-            <li>remove a thumbnail item immidiately from the thumbnail row if it was deleted</li>
-            <li>use the eog scrollbar for cheese thumbnails</li>
-            <li>give a detailed error message if some gstreamer element is missing</li>
-            <li>added a delete action to immediately delete files and a gconf key to show/hide it</li>
-            <li>add multiple selection in the picture listing pane</li>
-            <li>add the multiplex thumbnail generator algorithm</li>
-            <li>resolve wrong sorting issue of the thumbnails</li>
-            <li>tons of bug fixes</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download.html">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-August/msg00056.html">full release notes</a>)
 
         </div>
       </div><!-- bottom -->
