@@ -1,6 +1,12 @@
 2008-09-22  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  populate the cheese 2.24.0 release
+
+2008-09-22  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
 	  www.gnome.org/projects/cheese/index.html,
 	  www.gnome.org/projects/cheese/tour.html: 
 	  change the menu layout of the cheese page
